Change in helm file

--- a/helm.yaml
+++ b/helm.yaml
@@ -6,3 +6,6 @@ cronjobs:
     #    schedule: "off"
     #  - environment: "qa"     # this should match the namespace
     #    schedule: "off"
+
+    seq:  
+      -enabled: true
