--- a/helm.yaml
+++ b/helm.yaml
@@ -30,5 +30,5 @@ cronjobs:
 
 smbShares:
   - name: mlmodels
-    location: \\cabifs\InsightReportingMLModels
+    location: \\cabifs.cabi.org\InsightReportingMLModels
     credentials: contentsubmission-serviceaccount
